# chess-logic-gpt

./: .amlignore  .dockerignore  .gitignore  DATA_CONTRACT.md  Dockerfile  README.md  pyproject.toml
cloud/azure/: job.yml
cloud/modal/: eval_modal.py  grpo_modal.py  train_modal.py
colab/: sft_8b_qlora.ipynb
configs/data/: mix_45_30_25.yaml  mix_50_25_25.yaml  sources.clean.yaml
configs/training/: qwen3_8b_grpo.yaml  qwen3_8b_grpo_gcp_45_30_25_sft1600.yaml  qwen3_8b_grpo_kaggle.yaml  qwen3_8b_grpo_l4.yaml  qwen_grpo.yaml  (+5 more)
docs/: DATASETS.md  RUNBOOK.md
kaggle/: kernel-metadata.json  train_kernel.py
kaggle_eval/: eval_kernel.py  kernel-metadata.json
kaggle_grpo/: grpo_kernel.py  kernel-metadata.json
kaggle_quotacheck/: check.py  kernel-metadata.json
kaggle_sft_resume/: kernel-metadata.json  sft_resume_chain.py
kaggle_verify/: kernel-metadata.json  verify.py
scripts/: build_chess_positions.py  build_ood_eval.py  cloud_train.sh  download_lichess_sample.sh  evaluate.py  fetch_data.py  gcp_grpo_vm_run.sh  gcp_sft_vm_run.sh  generate_applied_reasoning.py  generate_endgame_candidates.py  generate_ethics_calibration.py  generate_logic.py  generate_memory.py  ingest_puzzles.py  kaggle_sft_autolaunch.sh  label_stockfish.py  label_syzygy.py  mix_dataset.py  monitor_training.py  push_data_to_hub.py  regenerate_chess_traces.py  train_grpo.py  train_lora.py
tests/: test_curriculum.py  test_eval.py  test_formatting.py  test_generators.py  test_grpo_data.py  test_logic_reward.py  test_mixer.py  test_monitor.py  test_precision.py  test_puzzles.py  test_rewards.py
(+21 files in other folders)
