[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-logic-gpt"
version = "0.1.0"
description = "Clean-room chess + logic + memory model training pipeline"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "zstandard>=0.22.0",
  "python-chess>=1.999",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
training = [
  "datasets>=2.20.0",
  "transformers>=4.45.0",
  "accelerate>=0.33.0",
  "peft>=0.12.0",
  "trl>=0.9.6",
  "bitsandbytes>=0.43.0; platform_system != 'Darwin'",
  "torch>=2.3.0",
  "trackio>=0.0.7",
  "hf-transfer>=0.1.6",
  "jinja2>=3.1.0",
]
cloud = [
  "modal>=0.64.0",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
